--- a/README.Rmd
+++ b/README.Rmd
@@ -6,7 +6,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Seja bem vindo! :smiley: :grin:
+# Seja bem vindo(a)! :smiley: :grin:
 
 :calendar: 14, 15 de Setembro, 2020
 
