--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 :alarm_clock: 09:00 - 17:00
 
-:ledger: Slide [1](https://deivisonsouza.github.io/R-Introduction/Slides/01-Introduction.html)
+:ledger: Slide [1](https://deivisonsouza.github.io/R-Introduction/Slides/01-Introduction.html),
+[1](https://deivisonsouza.github.io/R-Introduction/Slides/02-Objects.html)
 
 <img src="Slides/fig/ufpa.png" width="100" align="middle" class="center"> <img src="Slides/fig/floresta.png" width="100" align="middle" class="center">
 
