--- a/README.Rmd
+++ b/README.Rmd
@@ -6,11 +6,54 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+library(magrittr)
+repo <- "R-Introduction"
+```
+
+<!-- Emprestei a função list_github_files() da Curso-R (https://github.com/curso-r). Na verdade a ideia por trás desse readme emprestei da Curso-R. Achei excelente!-->
+
+```{r, include = FALSE}
+list_github_files <- function(repo, dir = NULL, ext = NULL) {
+
+  req <- httr::GET(
+    paste0(
+      "https://api.github.com/repos/DeivisonSouza/",
+      repo,
+      "/git/trees/master?recursive=1"
+    )
+  )
+
+  httr::stop_for_status(req)
+
+  arquivos <- unlist(
+    lapply(httr::content(req)$tree, "[", "path"),
+    use.names = FALSE
+  )
+
+  if (!is.null(dir)) {
+    arquivos <- grep(dir, arquivos, value = TRUE, fixed = TRUE)
+  }
+
+  if (!is.null(ext)) {
+    arquivos <- arquivos[grep(paste0(ext, "$"), arquivos)]
+  }
+
+  return(arquivos)
+}
+```
+
 # Seja bem vindo(a)! :smiley: :grin:
 
-:calendar: 14, 15 de Setembro, 2020
+:calendar: 26, 27 de Novembro e 03, 04, 10 de Dezembro, 2020
 
-:alarm_clock: 09:00 - 17:00
+:alarm_clock: 14h00min - 18h20min
 
 :ledger: Slide [1](https://deivisonsouza.github.io/R-Introduction/Slides/01-Introduction.html),
 [2](https://deivisonsouza.github.io/R-Introduction/Slides/02-Objects.html)
@@ -20,6 +63,20 @@ knitr::opts_chunk$set(echo = TRUE)
 # Descrição
 
 O curso de **Linguagem de programação R: uma introdução para iniciantes** constitui uma atividade complementar no âmbito do **Ensino Remoto Emergencial (ERE)** na [Universidade Federal do Pará (UFPA)](https://portal.ufpa.br/index.php), conforme reza a [Resolução  n. 5.294, de 21 de agosto de 2020](http://sege.ufpa.br/boletim_interno/downloads/resolucoes/consepe/2020/Resolucao_5294_2020_CONSEPE.pdf). Este curso foi elaborado para atender aos discentes regularmente matriculados no curso de graduação em Engenharia Florestal da UFPA. O objetivo do curso é aproximar os discentes da linguagem de programação R, estimulando seu uso para análise de dados científicos, no âmbito das Ciências Florestais. Este repositório guarda os arquivos .Rmd, figuras originais (e outros) que originaram os slides do curso (construídos com pacote `xarigan`) disponíveis no repositório [R-Introduction-slides](https://github.com/DeivisonSouza/R-Introduction-slides).
+
+# Slides do curso
+
+Todos os slides do curso **Linguagem de programação R: uma introdução para iniciantes** estão disponíveis nos links a seguir. 
+
+```{r, echo = FALSE}
+knitr::kable(
+  tibble::tibble(
+    Slide = list_github_files(repo=repo, "Slides/", "html"),
+    Link = paste0("https://deivisonsouza.github.io/", repo, "/", Slide)
+  ) %>% 
+    dplyr::filter(!stringr::str_detect(Slide, "_files/"))
+)
+```
 
 # Facilitador :deciduous_tree:
 
