--- a/README.Rmd
+++ b/README.Rmd
@@ -51,9 +51,9 @@ list_github_files <- function(repo, dir = NULL, ext = NULL) {
 
 # Seja bem vindo(a)! :smiley: :grin:
 
-:calendar: 26, 27 de Novembro e 03, 04, 10 de Dezembro, 2020
+:calendar: **26, 27 de Novembro e 03, 04, 10 de Dezembro, 2020**
 
-:alarm_clock: 14h00min - 18h20min
+:alarm_clock: **14h00min - 18h20min**
 
 :ledger: Slide [1](https://deivisonsouza.github.io/R-Introduction/Slides/01-Introduction.html),
 [2](https://deivisonsouza.github.io/R-Introduction/Slides/02-Objects.html)
